Add notice if the image is too small for some of the formats

--- a/Resources/translations/ezexceed.no.yml
+++ b/Resources/translations/ezexceed.no.yml
@@ -5,3 +5,4 @@ ngremotemedia.edit.tag.write: 'Merkelapp'
 ngremotemedia.edit.tag.add: 'Legg til merkelapp'
 ngremotemedia.edit.browse: 'Søk etter media'
 ngremotemedia.edit.upload: 'Last opp nytt'
+ngremotemedia.edit.media_too_small: 'This image might be too small for some of the configured formats.'
