NGSTACK-502 Prepare translations

--- a/bundle/Resources/translations/ngremotemedia.en.yml
+++ b/bundle/Resources/translations/ngremotemedia.en.yml
@@ -29,9 +29,10 @@ ngrm:
                     all_media_types: 'All media types'
                     select_folder: 'Select folder'
                     all_folders: 'All folders'
-                    search: 'Search (by name, tag, or both)'
-                    search_by_name: 'Search by name'
-                    search_by_tag: 'Search by tag'
+                    select_tag: 'Select tag'
+                    all_tags: 'All tags'
+                    search: 'Search (by name, tag, folder, alternate text etc.)'
+                    search_placeholder: 'Enter your search term'
                 empty_folder: 'Folder is empty'
                 empty_folder_hint: 'Upload media from your local storage'
                 select: 'Select'
