--- a/bundle/Resources/translations/ngremotemedia.no.yml
+++ b/bundle/Resources/translations/ngremotemedia.no.yml
@@ -11,12 +11,16 @@ ngrm:
             title: 'Select media'
             facets:
                 image_and_documents: 'Image and documents'
-                video: 'Video'
+                video_and_audio: 'Video and audio'
+                raw: 'RAW'
+                select_media_type: 'Select media type'
+                all_media_types: 'All media types'
                 select_folder: 'Select folder'
                 all_folders: 'All folders'
-                search: 'Search (by name, tag, or both)'
-                search_by_name: 'Search by name'
-                search_by_tag: 'Search by tag'
+                select_tag: 'Select tag'
+                all_tags: 'All tags'
+                search: 'Search (by name, tag, folder, alternate text etc.)'
+                search_placeholder: 'Enter your search term'
             empty_folder: 'Folder is empty'
             empty_folder_hint: 'Upload media from your local storage'
             select: 'Select'
