--- a/bundle/Resources/translations/ngremotemedia.no.yml
+++ b/bundle/Resources/translations/ngremotemedia.no.yml
@@ -1,34 +1,68 @@
 ngrm:
-    vue:
-        interactions:
-            scale: 'Skalér'
-            remove_media: 'Fjern media'
-            manage_media: 'Manage media'
-        preview:
-            alternate_text: 'Alternativ tekst'
+    edit:
+        form:
+            field:
+                alt_text: 'Alt text'
+                tags: 'Tags'
+        label:
             size: 'Size'
-        browse:
-            title: 'Select media'
-            facets:
-                image_and_documents: 'Image and documents'
-                video_and_audio: 'Video and audio'
-                raw: 'RAW'
-                select_media_type: 'Select media type'
-                all_media_types: 'All media types'
-                select_folder: 'Select folder'
-                all_folders: 'All folders'
-                select_tag: 'Select tag'
-                all_tags: 'All tags'
-                search: 'Search (by name, tag, folder, alternate text etc.)'
-                search_placeholder: 'Enter your search term'
-            empty_folder: 'Folder is empty'
-            empty_folder_hint: 'Upload media from your local storage'
-            select: 'Select'
-            load_more: 'Load more'
-        editor_insert:
-            title: 'Insert remote media'
-            variations:
-                original_image: 'Original image'
-            button:
-                insert: 'Insert media'
+            crop: 'Crop'
+            remove_media: 'Remove media'
+            browse: 'Browse media'
+            upload: 'Upload'
+        vue:
+            interactions:
+                scale: 'Skalér'
+                remove_media: 'Fjern media'
+                manage_media: 'Manage media'
+                quick_upload: 'Quick upload'
+            preview:
+                alternate_text: 'Alternativ tekst'
+                size: 'Size'
+            browse:
+                title: 'Select media'
+                facets:
+                    image_and_documents: 'Image and documents'
+                    video_and_audio: 'Video and audio'
+                    raw: 'RAW'
+                    select_media_type: 'Select media type'
+                    all_media_types: 'All media types'
+                    select_folder: 'Select folder'
+                    loading_folders: 'Loading folders...'
+                    all_folders: 'All folders'
+                    select_tag: 'Select tag'
+                    loading_tags: 'Loading tags...'
+                    all_tags: 'All tags'
+                    search: 'Search (by name, tag, folder, alternate text etc.)'
+                    search_placeholder: 'Enter your search term'
+                empty_folder: 'Folder is empty'
+                empty_folder_hint: 'Upload media from your local storage'
+                select: 'Select'
+                load_more: 'Load more'
+            crop:
+                reset: 'Reset'
+                apply: 'Apply'
                 cancel: 'Cancel'
+                add: 'Add'
+                preview: 'Preview'
+                save_sizes: 'Save sizes'
+                add_size: 'Add crop size'
+                added_for_confirmation: 'Added for confirmation.'
+                media_too_small: 'Media is too small.'
+            media_gallery:
+                empty_folder: 'Folder is empty'
+                upload_media: 'Upload media from your local storage.'
+                select: 'Select'
+                load_more: 'Load more'
+            upload:
+                select_folder: 'Select folder'
+                save: 'Save'
+                new_folder: 'Create new'
+                new: 'new'
+            editor_insert:
+                title: 'Insert remote media'
+                variations:
+                   original_image: 'Original image'
+                button:
+                    insert: 'Insert media'
+                    cancel: 'Cancel'
