--- a/bundle/Resources/translations/ngremotemedia.no.yml
+++ b/bundle/Resources/translations/ngremotemedia.no.yml
@@ -55,14 +55,19 @@ ngrm:
                 select: 'Select'
                 load_more: 'Load more'
             upload:
-                select_folder: 'Select folder'
-                save: 'Save'
-                new_folder: 'Create new'
-                new: 'new'
+                breadcrumbs_info: 'You are here:'
+                root_folder: '(root)'
+                info_text: 'Double click on a folder to open it'
+                button:
+                    select: 'Select'
+                    create: 'Create'
+                    save: 'Save'
+                placeholder:
+                    new_folder: 'New folder name'
             editor_insert:
                 title: 'Insert remote media'
                 variations:
-                   original_image: 'Original image'
+                    original_image: 'Original image'
                 button:
                     insert: 'Insert media'
                     cancel: 'Cancel'
