NGSTACK-504 Improve fieldtype styling

--- a/bundle/Resources/translations/ngremotemedia.no.yml
+++ b/bundle/Resources/translations/ngremotemedia.no.yml
@@ -18,6 +18,7 @@ ngrm:
                 quick_upload: 'Quick upload'
             preview:
                 alternate_text: 'Alternativ tekst'
+                tags: 'Tags'
                 size: 'Size'
             browse:
                 title: 'Select media'
