--- a/bundle/Resources/translations/ngremotemedia.no.yml
+++ b/bundle/Resources/translations/ngremotemedia.no.yml
@@ -13,7 +13,9 @@ ngrm:
         vue:
             interactions:
                 scale: 'Skalér'
+                no_media_selected: 'No media selected'
                 remove_media: 'Fjern media'
+                select_media: 'Select media'
                 manage_media: 'Manage media'
                 quick_upload: 'Quick upload'
             preview:
