NGSTACK-493 Add translations for variation select

--- a/bundle/Resources/translations/ngremotemedia.en.yml
+++ b/bundle/Resources/translations/ngremotemedia.en.yml
@@ -70,6 +70,7 @@ ngrm:
             editor_insert:
                 title: 'Insert remote media'
                 variations:
+                    label: 'Variation to insert'
                     original_image: 'Original image'
                 button:
                     insert: 'Insert media'
