--- a/bundle/Resources/translations/ngremotemedia.en.yaml
+++ b/bundle/Resources/translations/ngremotemedia.en.yaml
@@ -83,6 +83,7 @@ ngrm:
                     new_folder: 'New folder name'
                 error:
                     existing_resource: 'Different resource with same name already exists in this folder! Change folder, filename, use overwrite or '
+                    unsupported_resource_type: 'Resource has been uploaded but it\s type is not supported so it can be used here! Supported types: '
             editor_insert:
                 title: 'Insert remote media'
                 caption:
