ECI-15 implement search by metadata fields on frontend

--- a/bundle/Resources/translations/ngremotemedia.en.yml
+++ b/bundle/Resources/translations/ngremotemedia.en.yml
@@ -36,6 +36,8 @@ ngrm:
                     select_tag: 'Select tag'
                     loading_tags: 'Loading tags...'
                     all_tags: 'All tags'
+                    metadata_fields: 'Meta'
+                    all_metadata_fields: 'All'
                     search: 'Search (by name, tag, folder, alternate text etc.)'
                     search_placeholder: 'Enter your search term'
                 empty_folder: 'Folder is empty'
