NGSTACK-760 Implement caption

--- a/bundle/Resources/translations/ngremotemedia.en.yaml
+++ b/bundle/Resources/translations/ngremotemedia.en.yaml
@@ -30,6 +30,7 @@ ngrm:
                 quick_upload: 'Upload file'
             preview:
                 alternate_text: 'Alternate text'
+                caption: 'Caption'
                 tags: 'Tags'
                 size: 'Size'
             browse:
