--- a/bundle/Resources/translations/ngremotemedia.en.yaml
+++ b/bundle/Resources/translations/ngremotemedia.en.yaml
@@ -28,6 +28,9 @@ ngrm:
                 select_media: 'Select media'
                 manage_media: 'Manage media'
                 quick_upload: 'Upload file'
+            select_folder_interaction:
+                button: 'Select folder'
+                empty: 'No folder selected'
             preview:
                 alternate_text: 'Alternate text'
                 alternate_text_info: 'Alt text is stored directly in Cloudinary on a resource so updating it here will also update it on all other locations which are using that same resource.'
